--- a/client/src/component/App2.scss
+++ b/client/src/component/App2.scss
@@ -71,7 +71,11 @@ row, .row{
 
 .section-header{
     text-decoration: white underline;
-    font-family: 'Cinzel', serif;
+    font-family: 'Fira Sans', sans-serif;//'Cinzel', serif;
+}
+
+.main-header{
+    font-family: 'Cinzel', serif; 
 }
 
 #icon-block {
